--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "eslint": "eslint src/**/*.js src/**/*.jsx",
     "test": "npm run eslint && jest",
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --open",
     "build": "webpack --mode development"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
     "babel-jest": "24.7.1",
