--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
+    "axios-mock-adapter": "1.16.0",
     "babel-jest": "24.7.1",
     "babel-loader": "8.0.5",
     "enzyme": "3.9.0",
