--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Личный проект «Что посмотреть» от HTML Academy",
   "scripts": {
-    "eslint": "eslint src/**/*.js src/**/*.jsx",
+    "eslint": "eslint src/**/*.js src/**/*.jsx src/**/*.ts src/**/*.tsx",
     "test": "npm run eslint && jest",
     "start": "webpack-dev-server --open",
     "build": "webpack --mode development"
@@ -14,6 +14,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
+    "@types/jest": "24.0.13",
     "@types/react": "16.8.19",
     "axios-mock-adapter": "1.16.0",
     "babel-jest": "24.7.1",
@@ -25,6 +26,7 @@
     "eslint-plugin-react": "7.12.4",
     "jest": "24.7.1",
     "react-test-renderer": "16.8.6",
+    "ts-jest": "24.0.2",
     "ts-loader": "6.0.2",
     "typescript": "3.5.1",
     "utility-types": "3.7.0",
@@ -38,7 +40,6 @@
   "dependencies": {
     "axios": "0.18.0",
     "classnames": "2.2.6",
-    "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.0.3",
